--- a/examples/typescript/src/index.html
+++ b/examples/typescript/src/index.html
@@ -2,22 +2,30 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>ESP Tool</title>
+        <title>Spectoda Flashovatko</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.19.0/css/xterm.css">
         <link
             href="https://fonts.googleapis.com/css?family=Orbitron"
             rel="stylesheet"
         />
-        <link rel="icon" href="../assets/favicon.ico" />
+        <link rel="icon" href="../assets/apple-touch-icon.png" />
          <script src="https://cdn.jsdelivr.net/npm/xterm@4.19.0/lib/xterm.min.js"></script>
          <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.js"></script>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+         <style>
+            body {
+                background: black;
+
+            }
+            h1,h2,h3,h4,label,th,b,p,input[type=file] {
+                color: white !important;
+            }
+         </style>
     </head>
-    <body>
-        <h1 align="center"><p><img src="../assets/esp-logo.png" width="42" height="42" style="vertical-align:middle" crossorigin></img> ESP Tool</p></h1>
-        <h4 align="center">A Serial Flasher utility for Espressif chips</h4>
+    <body >
+        <h1 align="center"><p><img src="../assets/spectoda-logo-1.png"height="100" style="vertical-align:middle" crossorigin></img> Flash tool</p></h1>
         <div id="safariErr" style="display:none"><p align="center" style="color:red">This tool is not supported on Safari browser!</p>
         </div>
         <div align="center">
