--- a/examples/typescript/src/index.html
+++ b/examples/typescript/src/index.html
@@ -29,7 +29,7 @@
         <div id="safariErr" style="display:none"><p align="center" style="color:red">This tool is not supported on Safari browser!</p>
         </div>
         <div align="center">
-            <a class="btn btn-info" href="./docs/index.html">View the API Documentation</a>
+            <!-- <a class="btn btn-info" href="./docs/index.html">View the API Documentation</a> -->
           </div>
         <div class="container" id="main">
             <hr/>
@@ -44,7 +44,7 @@
                     <option value="115200">115200</option>
                 </select>
 
-                <input class="btn btn-info btn-sm" type="button" id="connectButton" value="Connect" />
+                <input class="btn btn-primary btn-" type="button" id="connectButton" value="Connect" />
                 <input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace" />
                 <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect" />
                 <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash" />
@@ -68,7 +68,7 @@
                         </tbody>
                     </table>
                     <input class="btn btn-info btn-sm" type="button" id="addFile" value="Add File" />
-                    <input class="btn btn-info btn-sm" type="button" id="programButton" value="Program" />
+                    <input class="btn btn-primary " type="button" id="programButton" value="Flash controller" />
                 </div>
                 <output id="list"></output>
                 <hr/>
