--- a/examples/typescript/src/index.html
+++ b/examples/typescript/src/index.html
@@ -1,107 +1,132 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Spectoda Flashovatko</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.19.0/css/xterm.css">
-        <link
-            href="https://fonts.googleapis.com/css?family=Orbitron"
-            rel="stylesheet"
-        />
-        <link rel="icon" href="../assets/apple-touch-icon.png" />
-         <script src="https://cdn.jsdelivr.net/npm/xterm@4.19.0/lib/xterm.min.js"></script>
-         <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.js"></script>
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-         <style>
-            body {
-                background: black;
+  <head>
+    <meta charset="utf-8" />
+    <title>Spectoda Flashovatko</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.19.0/css/xterm.css" />
+    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" />
+    <link rel="icon" href="../assets/apple-touch-icon.png" />
+    <script src="https://cdn.jsdelivr.net/npm/xterm@4.19.0/lib/xterm.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/4.19.0/addons/fit/fit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+      body {
+        background: black;
+      }
+      h1,
+      h2,
+      h3,
+      h4,
+      label,
+      th,
+      b,
+      p,
+      input[type="file"] {
+        color: white !important;
+      }
+      .header-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 12px;
+        padding: 16px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="header-container">
+      <img src="../assets/spectoda-logo-1.png" height="32" style="vertical-align: middle" crossorigin />
+      <h1 style="font-size: 16px; margin: 0">Flash tool</h1>
+    </div>
 
-            }
-            h1,h2,h3,h4,label,th,b,p,input[type=file] {
-                color: white !important;
-            }
-         </style>
-    </head>
-    <body >
-        <h1 align="center"><p><img src="../assets/spectoda-logo-1.png"height="100" style="vertical-align:middle" crossorigin></img> Flash tool</p></h1>
-        <div id="safariErr" style="display:none"><p align="center" style="color:red">This tool is not supported on Safari browser!</p>
-        </div>
-        <div align="center">
-            <!-- <a class="btn btn-info" href="./docs/index.html">View the API Documentation</a> -->
+    <div id="safariErr" style="display: none">
+      <p align="center" style="color: red">This tool is not supported on Safari browser!</p>
+    </div>
+
+    <div class="container flex" id="main">
+      <details>
+        <summary>
+          <div class="btn btn-secondary btn-sm d-block mx-auto" style="background-color: gray">Advanced controls</div>
+        </summary>
+        <div id="program">
+          <h3>Program</h3>
+          <label for="baudrates" id="lblBaudrate">Baudrate:</label>
+          <label style="display: none" id="lblConnTo">Connected to device: </label>
+          <select name="baudrates" id="baudrates">
+            <option value="921600">921600</option>
+            <option value="460800">460800</option>
+            <option value="230400">230400</option>
+            <option value="115200">115200</option>
+          </select>
+
+          <input class="btn btn-primary btn-" type="button" id="connectButton" value="Connect" />
+          <input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace" />
+          <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect" />
+          <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash" />
+          <br />
+
+          <div class="alert alert-danger alert-dismissible" id="alertDiv" style="display: none; margin-top: 10px">
+            <a href="#" class="close" aria-label="close" onclick="$('.alert').hide()">&times;</a>
+            <span id="alertmsg"></span>
           </div>
-        <div class="container flex justify-content-center" id="main">
-            <hr/>
-            <details>
-                <summary>
-                    <div class="btn btn-secondary btn-sm d-block mx-auto" style="background-color: antiquewhite;">Advanced stuff 🕹️</div>
-                </summary>
-            <div id="program">
-                <h3> Program </h3>
-                <label for="baudrates" id="lblBaudrate">Baudrate:</label>
-                <label style="display:none" id="lblConnTo">Connected to device: </label>
-                <select name="baudrates" id="baudrates">
-                    <option value="921600">921600</option>
-                    <option value="460800">460800</option>
-                    <option value="230400">230400</option>
-                    <option value="115200">115200</option>
-                </select>
 
-                <input class="btn btn-primary btn-" type="button" id="connectButton" value="Connect" />
-                <input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace" />
-                <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect" />
-                <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash" />
-                <br>
-
-                <div class="alert alert-danger alert-dismissible" id="alertDiv" style="display:none; margin-top:10px">
-                    <a href="#" class="close" aria-label="close" onclick="$('.alert').hide()">&times;</a>
-                    <span id="alertmsg"></span>
-                </div>
-
-                <div id="files">
-                    <table class="table table-striped" id="fileTable">
-                        <thead class="thead-light">
-                            <tr>
-                                <th>Flash Address</th>
-                                <th>File</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody id="tableBody">
-                        </tbody>
-                    </table>
-                    <input class="btn btn-info btn-sm" type="button" id="addFile" value="Add File" />
-                </div>
-                <output id="list"></output>
-                <hr/>
-            </div>
-
-            <div id="console">
-                <h3>Debug Console </h3>
-                <label style="display:none" id="lblConsoleFor">Connected to device: </label>
-
-                <input class="btn btn-info" type="button" id="consoleStartButton" value="Start" />
-                <input class="btn btn-info" type="button" id="consoleStopButton" value="Stop" />
-                <input class="btn btn-info" type="button" id="resetButton" value="Reset" />
-                <hr/>
-            </div>
-        </details>
-            <input class="btn btn-primary btn-lg d-block mx-auto mt-5" style="display: block; margin:auto;margin-top:50px" type="button" id="programButton" value="Flash controller" />
-<div id="msg" style="margin:50px;margin-left:auto;margin-right: auto; text-align: center;"></div>
-            
-            <div id="terminal" style="max-height: 300px;"></div>
+          <div id="files">
+            <table class="table table-striped" id="fileTable">
+              <thead class="thead-light">
+                <tr>
+                  <th>Flash Address</th>
+                  <th>File</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody id="tableBody"></tbody>
+            </table>
+            <input class="btn btn-info btn-sm" type="button" id="addFile" value="Add File" />
+          </div>
+          <output id="list"></output>
         </div>
-        <script src="index.ts" type="module"></script>
-        <script>
-            // Safari 3.0+ "[object HTMLElementConstructor]"
-            var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || (typeof safari !== 'undefined' && window['safari'].pushNotification));
 
-            if(isSafari)
-            {
-               document.getElementById("safariErr").style.display = "inline";
-               document.getElementById("main").style.display = "none";
-            }
-        </script>
-    </body>
+        <div id="console">
+          <h3>Debug Console</h3>
+          <label style="display: none" id="lblConsoleFor">Connected to device: </label>
+
+          <input class="btn btn-info" type="button" id="consoleStartButton" value="Start" />
+          <input class="btn btn-info" type="button" id="consoleStopButton" value="Stop" />
+          <input class="btn btn-info" type="button" id="resetButton" value="Reset" />
+        </div>
+      </details>
+      <input
+        class="btn btn-primary btn-lg d-block mx-auto"
+        style="display: block; margin-top: 24px; background-color: #5e81f2"
+        type="button"
+        id="programButton"
+        value="Flash controller"
+      />
+      <div
+        id="msg"
+        style="margin: 16px; font-size: 13px; margin-left: auto; margin-right: auto; color: lightgray"
+      ></div>
+
+      <div class="terminal-wrapper">
+        <div id="terminal"></div>
+      </div>
+    </div>
+    <script src="index.ts" type="module"></script>
+    <script>
+      // Safari 3.0+ "[object HTMLElementConstructor]"
+      var isSafari =
+        /constructor/i.test(window.HTMLElement) ||
+        (function (p) {
+          return p.toString() === "[object SafariRemoteNotification]";
+        })(!window["safari"] || (typeof safari !== "undefined" && window["safari"].pushNotification));
+
+      if (isSafari) {
+        document.getElementById("safariErr").style.display = "inline";
+        document.getElementById("main").style.display = "none";
+      }
+    </script>
+  </body>
 </html>
