--- a/examples/typescript/src/index.html
+++ b/examples/typescript/src/index.html
@@ -14,7 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
       body {
-        background: black;
+        background: rgb(23, 25, 36);
       }
       h1,
       h2,
