feat: add flash instructions
+ change body color

--- a/examples/typescript/src/index.html
+++ b/examples/typescript/src/index.html
@@ -15,6 +15,7 @@
     <style>
       body {
         background: rgb(23, 25, 36);
+        color: white;
       }
       h1,
       h2,
@@ -47,6 +48,8 @@
     </div>
 
     <div class="container flex" id="main">
+      <a href="https://app.clickup.com/4663973/v/dc/4ean5-134/4ean5-36441"> Instructions for flashing a controller </a>
+
       <details>
         <summary>
           <div class="btn btn-secondary btn-sm d-block mx-auto" style="background-color: gray">Advanced controls</div>
