--- a/examples/typescript/src/index.html
+++ b/examples/typescript/src/index.html
@@ -67,7 +67,7 @@
 
           <input class="btn btn-primary btn-" type="button" id="connectButton" value="Connect" />
           <input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace" />
-          <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect" />
+          <!-- <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect" /> -->
           <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash" />
           <br />
 
