feat: two-way communication, error and reset messages

--- a/examples/typescript/src/index.html
+++ b/examples/typescript/src/index.html
@@ -48,7 +48,13 @@
     </div>
 
     <div class="container flex" id="main">
-      <a href="https://app.clickup.com/4663973/v/dc/4ean5-134/4ean5-36441"> Instructions for flashing a controller </a>
+      <a
+        href="https://app.clickup.com/4663973/v/dc/4ean5-134/4ean5-36441"
+        style="margin-bottom: 5px; display: block"
+        target="_blank"
+      >
+        Instructions for flashing a controller
+      </a>
 
       <details>
         <summary>
@@ -67,7 +73,13 @@
 
           <input class="btn btn-primary btn-" type="button" id="connectButton" value="Connect" />
           <input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace" />
-          <!-- <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect" /> -->
+          <input
+            class="btn btn-warning btn-sm"
+            type="button"
+            id="disconnectButton"
+            style="display: none"
+            value="Disconnect"
+          />
           <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash" />
           <br />
 
